# SlideCraft

./: .gitignore  README.md  llm_prompt.md
agent-ppt/: CLAUDE.md  SKILL.md  demo.py  pyproject.toml
agent-ppt/src/pppt/: assets.py  cli.py  context.py
agent-ppt/src/pppt/ooxml/: package.py
agent-ppt/src/pppt/xml_builders/: pictures.py  transitions.py
agent-ppt/tests/: test_exporter.py  test_utils.py
src/pppt/: __init__.py  constants.py  exporter.py  utils.py
src/pppt/ooxml/: presentation.py
src/pppt/xml_builders/: __init__.py  backgrounds.py  common.py  tables.py  text.py
tests/: conftest.py
web-ppt/: pyproject.toml
web-ppt/src/pppt/: gui.py  image_utils.py
web-ppt/src/pppt/ooxml/: __init__.py  slides.py
web-ppt/src/pppt/xml_builders/: animations.py  charts.py  groups.py  shapes.py
